--- a/lbl_web_crawler/requirements.txt
+++ b/lbl_web_crawler/requirements.txt
@@ -3,6 +3,7 @@ characteristic==14.3.0
 cryptography==0.8.1
 cssselect==0.9.1
 enum34==1.0.4
+ipython==3.1.0
 lxml==3.4.2
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
